2014-02-08  Per Bothner  <per@bothner.com>

	* WriterManager.java (registerShutdownHook): Simplify - we now
	require Java 3 and thus Runtime.addShutdownHook.

2014-01-10  Per Bothner  <per@bothner.com>

	* InPort.java: Add synchronization based on lock field.
	* BinaryInPort.java: Fix some small bugs.

2014-01-09  Per Bothner  <per@bothner.com>

	* BinaryInPort.java (<init>): Don't force using a fixed buffer.
	Instead setKeepFullLines(false).

	* LineInputStreamReader.java: Merge into BinaryInPort.java, and remove.

2014-01-08  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java: Merge into InPort.java, and remove.

2014-01-06  Per Bothner  <per@bothner.com>

	* BinaryInPort.java: Moved from gnu.mapping.
	* BinaryOutPort.java: Likewise.
	* CharArrayInPort.java: Likewise.
	* CharArrayOutPort.java: Likewise.
	* InPort.java: Likewise.
	* OutPort.java: Likewise.
	* LogWriter.java: Likewise.
	* TtyInPort.java: Likewise.
	* LineBufferedReader.java: Moved from gnu.text.
	* LineInputStreamReader.java: Likewise.
	* NullReader.java: Likewise.
	* PrettyWriter.java: Likewise.
	* QueueReader.java: Likewise.
	* WriterManager.java: Likewise.