@@ -1,3 +1,7 @@
+2014-02-16  Per Bothner  <per@bothner.com>
+
+	* WriterManager.java: Make sure Error is uncaught or re-thrown.
+
 2014-02-08  Per Bothner  <per@bothner.com>
 
 	* WriterManager.java (registerShutdownHook): Simplify - we now
